add dump for cities

--- a/weather/users/templates/users/login.html
+++ b/weather/users/templates/users/login.html
@@ -11,6 +11,11 @@
          <button type="submit" class="btn btn-success">
              Войти
         </button>
+        <a href="{% url 'register' %}">
+        <button type="button" class="btn btn-success">
+            Регистрация
+        </button>
+        </a>
         {% endbuttons %}
     </form>
 {% endblock content %}
